add blog content & videos content on home page

--- a/index.html
+++ b/index.html
@@ -43,12 +43,50 @@
             <div class="box-container tulisan-terbaru">
                 <h1>Blog Terbaru</h1>
                 <h2>Jangan Sampai Ketinggalan Tulisan Terbaru Kami</h2>
+                <div class="container-items">
+                    <div class="box-content">
+                        <img src="/images/content-img.jpg" alt="content-img" width="100%">
+                        <h1>Judul Blog</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
+                            excepturi consectetur deleniti libero iure eum non...</p>
+                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                    </div>
+                    <div class="box-content">
+                        <img src="/images/content-img2.jpg" alt="content-img" width="100%">
+                        <h1>Judul Blog</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
+                            excepturi consectetur deleniti libero iure eum non...</p>
+                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                    </div>
+                    <div class="box-content">
+                        <img src="/images/content-img3.jpg" alt="content-img" width="100%">
+                        <h1>Judul Blog</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
+                            excepturi consectetur deleniti libero iure eum non...</p>
+                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                    </div>
+                </div>
+
             </div>
             <div class="box-container subscribe">
-                <h1>Berlangganan Gratis</h1>
-                <h2>Daftarkan email Anda untuk mendapatkan informasi terbaru dari kami</h2>
-                <div class="email">
-                    <input type="email" name="email" id="email" placeholder="john">
+                <h1>Video Terbaru</h1>
+                <h2>Tonton Juga Video Terbaru Dari Kami</h2>
+                <div class="container-items">
+                    <div class="box-content">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/X_Wji6qHe9Q" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="box-content">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/2Wya0ABjC-k" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="box-content">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/o3Z0uoXkzmA" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
