--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                 <h2>Jangan Sampai Ketinggalan Tulisan Terbaru Kami</h2>
                 <div class="container-items">
                     <div class="box-content">
-                        <img src="/images/content-img.jpg" alt="content-img" width="100%">
+                        <img src="images/content-img.jpg" alt="content-img" width="100%">
                         <h1>Judul Blog</h1>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
                             excepturi consectetur deleniti libero iure eum non...</p>
                         <a href="#" target="_blank">Baca Selengkapnya</a>
                     </div>
                     <div class="box-content">
-                        <img src="/images/content-img2.jpg" alt="content-img" width="100%">
+                        <img src="images/content-img2.jpg" alt="content-img" width="100%">
                         <h1>Judul Blog</h1>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
                             excepturi consectetur deleniti libero iure eum non...</p>
                         <a href="#" target="_blank">Baca Selengkapnya</a>
                     </div>
                     <div class="box-content">
-                        <img src="/images/content-img3.jpg" alt="content-img" width="100%">
+                        <img src="images/content-img3.jpg" alt="content-img" width="100%">
                         <h1>Judul Blog</h1>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
                             excepturi consectetur deleniti libero iure eum non...</p>
