--- a/index.html
+++ b/index.html
@@ -5,92 +5,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Selamat Datang - Learn With Trisna</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Beranda - Learn With Trisna</title>
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="index.html">
-                    <h1>Learn With Trisna</h1>
-                </a>
-            </div>
-            <div class="menu cf">
-                <ul class="menu-list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Contact</a></li>
+    <div class="container">
+        <header>
+            <a href="index.html">
+                <h1>Learn With Trisna</h1>
+            </a>
+            <div class="menu">
+                <ul>
+                    <li><a class="active" href="index.html">Beranda</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">Tentang</a></li>
+                    <li><a href="profile.html">Profil</a></li>
+                    <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <div class="hero">
-                <div>
-                </div>
-            </div>
+        </header>
+
+        <main>
+            <div class="hero"><img src="images/hero-1.jpg" alt="hero images"></div>
             <div class="quotes">
                 <h1>“Bermimpilah setinggi langit, jika engkau jatuh, engkau akan jatuh di antara bintang.”</h1>
                 <h2>- Ir. Soekarno -</h2>
             </div>
-            <div class="box-container tulisan-terbaru">
+            <div class="main-content">
                 <h1>Blog Terbaru</h1>
                 <h2>Jangan Sampai Ketinggalan Tulisan Terbaru Kami</h2>
                 <div class="container-items">
                     <div class="box-content">
                         <img src="images/content-img.jpg" alt="content-img" width="100%">
-                        <h1>Judul Blog</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
-                            excepturi consectetur deleniti libero iure eum non...</p>
-                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                        <a href="blog-detail.html">
+                            <h1>Belajar Dasar Pemrograman</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores obcaecati ipsum quae
+                            fugiat, minima fugit error, sed velit in, quod est qui? Quasi iusto quia obcaecati
+                            molestiae? Debitis, dolorum officiis?</p>
                     </div>
                     <div class="box-content">
                         <img src="images/content-img2.jpg" alt="content-img" width="100%">
-                        <h1>Judul Blog</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
-                            excepturi consectetur deleniti libero iure eum non...</p>
-                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                        <a href="#">
+                            <h1>Mengenal Fungsi Router</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores obcaecati ipsum quae
+                            fugiat, minima fugit error, sed velit in, quod est qui? Quasi iusto quia obcaecati
+                            molestiae? Debitis, dolorum officiis?</p>
                     </div>
                     <div class="box-content">
                         <img src="images/content-img3.jpg" alt="content-img" width="100%">
-                        <h1>Judul Blog</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio sit qui minima et
-                            excepturi consectetur deleniti libero iure eum non...</p>
-                        <a href="#" target="_blank">Baca Selengkapnya</a>
+                        <a href="#">
+                            <h1>Cara Mengatasi Bluescreen Pada Windows 10</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores obcaecati ipsum quae
+                            fugiat, minima fugit error, sed velit in, quod est qui? Quasi iusto quia obcaecati
+                            molestiae? Debitis, dolorum officiis?</p>
                     </div>
                 </div>
-
             </div>
-            <div class="box-container subscribe">
+            <div class="main-content">
                 <h1>Video Terbaru</h1>
                 <h2>Tonton Juga Video Terbaru Dari Kami</h2>
                 <div class="container-items">
-                    <div class="box-content">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/X_Wji6qHe9Q" frameborder="0"
+                    <div class="box-content videos">
+                        <iframe width="100%" src="https://www.youtube.com/embed/X_Wji6qHe9Q"
+                            frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="box-content">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/2Wya0ABjC-k" frameborder="0"
+                    <div class="box-content videos">
+                        <iframe width="100%" src="https://www.youtube.com/embed/2Wya0ABjC-k"
+                            frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="box-content">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/o3Z0uoXkzmA" frameborder="0"
+                    <div class="box-content videos">
+                        <iframe width="100%" src="https://www.youtube.com/embed/o3Z0uoXkzmA" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
         <div class="copyright">
             <p>© 2021 Learn With Trisna | Made with ❤️ from Tangerang</p>
