fix overlaps content

--- a/blog.html
+++ b/blog.html
@@ -39,15 +39,22 @@
                             </a>
                             <p>Ditulis 01 Februari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
                             <div class="text">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe
-                                    cumque
-                                    cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                    reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
                                 </p>
                             </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Programming</a>
+                            <div class="blog-kategori">
+                                <label for="kategori">Kategori : </label><a href="#" class="kategori">Programming</a>
+                            </div>
+
                         </div>
                     </div>
                     <div class="box-blog">
@@ -57,13 +64,22 @@
                                 <h1>Mengenal Fungsi Router</h1>
                             </a>
                             <p>Ditulis 21 Januari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe cumque
-                                cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
+                                </p>
+                            </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Networking</a>
+                            <div class="blog-kategori"><label for="kategori">Kategori : </label><a href="#"
+                                    class="kategori">Networking</a></div>
+
                         </div>
                     </div>
                     <div class="box-blog">
@@ -73,13 +89,22 @@
                                 <h1>Cara Mengatasi Bluescreen Pada Windows 10</h1>
                             </a>
                             <p>Ditulis 14 Januari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe cumque
-                                cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
+                                </p>
+                            </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Tips & Tricks</a>
+                            <div class="blog-kategori"><label for="kategori">Kategori : </label><a href="#"
+                                    class="kategori">Tips & Tricks</a></div>
+
                         </div>
                     </div>
                     <div class="box-blog">
@@ -89,14 +114,23 @@
                                 <h1>Cara Instalasi Android Studio di Windows 10</h1>
                             </a>
                             <p>Ditulis 14 Januari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe cumque
-                                cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
+                                </p>
+                            </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Programming</a><span>
-                                , </span><a href="#" class="kategori">Android</a>
+                            <div class="blog-kategori"><label for="kategori">Kategori : </label><a href="#"
+                                    class="kategori">Programming</a><span>
+                                    , </span><a href="#" class="kategori">Android</a></div>
+
                         </div>
                     </div>
                     <div class="box-blog">
@@ -106,15 +140,24 @@
                                 <h1>Apa Itu Arduino ? Belajar Tentang IOT</h1>
                             </a>
                             <p>Ditulis 14 Januari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe cumque
-                                cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
+                                </p>
+                            </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Programming</a><span>
-                                , </span><a href="#" class="kategori">Arduino</a><span> , </span><a href="#"
-                                class="kategori">IOT</a>
+                            <div class="blog-kategori"><label for="kategori">Kategori : </label><a href="#"
+                                    class="kategori">Programming</a><span>
+                                    , </span><a href="#" class="kategori">Arduino</a><span> , </span><a href="#"
+                                    class="kategori">IOT</a></div>
+
                         </div>
                     </div>
                     <div class="box-blog">
@@ -124,15 +167,24 @@
                                 <h1>Berkenalan Dengan Bahasa Pemrograman Swift</h1>
                             </a>
                             <p>Ditulis 14 Januari 2021 oleh <a href="profile.html">Trisna Nugraha</a></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore et saepe cumque
-                                cum nulla, veritatis repellendus ipsam sed error possimus recusandae veniam
-                                reprehenderit, laudantium rem consequatur dolores fugit natus!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut ab vel vero tempora ad
+                                    sed suscipit, consequuntur vitae iste! Commodi quae, magnam magni numquam nemo
+                                    praesentium culpa hic inventore accusantium!
+                                    Quae sequi tempora deserunt sint officiis iure, natus optio, assumenda enim eum
+                                    veniam explicabo inventore, deleniti nemo facilis. Sed excepturi aspernatur totam
+                                    animi reprehenderit eum quae a quaerat tempore necessitatibus.
+                                    Voluptatem aliquid quos aut asperiores dolore quod consequatur deleniti ducimus
+                                    nobis odit nihil velit architecto, aliquam cum recusandae autem in. Quaerat tenetur
+                                    esse quam cumque perferendis dolor quis, repudiandae alias?
+                                </p>
+                            </div>
                             <br>
-                            <label for="kategori">Kategori : </label><a href="#" class="kategori">Programming</a><span>
-                                , </span><a href="#" class="kategori">Apple</a><span> , </span><a href="#"
-                                class="kategori">IOS</a>
+                            <div class="blog-kategori"><label for="kategori">Kategori : </label><a href="#"
+                                    class="kategori">Programming</a><span>
+                                    , </span><a href="#" class="kategori">Apple</a><span> , </span><a href="#"
+                                    class="kategori">IOS</a></div>
+
                         </div>
                     </div>
                     <div class="pagination">
