--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         </header>
 
         <main>
-            <div class="description cf contact">
+            <div class="description contact cf ">
                 <h1>Punya Pertanyaan / Saran / Kritik?</h1>
                 <h2>Bila ada pesan yang ingin Anda sampaikan, dapat langsung mengisi form di bawah ini</h2>
                 <img src="images/contact-us.jpg" alt="contact-us">
