add slidershow on index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
         </header>
 
         <main>
-            <div class="hero"><img src="images/hero-1.jpg" alt="hero images"></div>
+            <div class="hero">
+                <div class="slider">
+                    <input type="radio" name="radio-btn" id="radio-img-1">
+                    <input type="radio" name="radio-btn" id="radio-img-2">
+                    <input type="radio" name="radio-btn" id="radio-img-3">
+                    <div class="slide first">
+                        <img src="images/hero-1.jpg" alt="hero-images-1">
+                    </div>
+                    <div class="slide">
+                        <img src="images/hero-2.jpg" alt="hero-images-2">
+                    </div>
+                    <div class="slide">
+                        <img src="images/hero-3.jpg" alt="hero-images-3">
+                    </div>
+                </div>
+                <div class="nav-indicator">
+                    <label for="radio-img-1" class="nav-btn"></label>
+                    <label for="radio-img-2" class="nav-btn"></label>
+                    <label for="radio-img-3" class="nav-btn"></label>
+                </div>
+            </div>
             <div class="quotes">
                 <h1>“Bermimpilah setinggi langit, jika engkau jatuh, engkau akan jatuh di antara bintang.”</h1>
                 <h2>- Ir. Soekarno -</h2>
@@ -72,14 +92,12 @@
                 <h2>Tonton Juga Video Terbaru Dari Kami</h2>
                 <div class="container-items">
                     <div class="box-content videos">
-                        <iframe width="100%" src="https://www.youtube.com/embed/X_Wji6qHe9Q"
-                            frameborder="0"
+                        <iframe width="100%" src="https://www.youtube.com/embed/X_Wji6qHe9Q" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                     <div class="box-content videos">
-                        <iframe width="100%" src="https://www.youtube.com/embed/2Wya0ABjC-k"
-                            frameborder="0"
+                        <iframe width="100%" src="https://www.youtube.com/embed/2Wya0ABjC-k" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
